# flink-rest-client

./: pyproject.toml  requirements.txt
flink_rest_client/: common.py  config.py
flink_rest_client/v1/: jobmanager.py
